@@ -1,7 +1,7 @@
 
 INCLUDES		= -I$(top_builddir)/include
 
-noinst_PROGRAMS	= db1 db2 db3 db4 db5 env1
+noinst_PROGRAMS	= db1 db2 db3 db4 db5 env1 env2
 
 db1_SOURCES  	= db1.c
 db1_LDADD    	= $(top_builddir)/src/libhamsterdb.la
@@ -20,5 +20,8 @@ db5_LDADD    	= $(top_builddir)/src/libhamsterdb.la
 
 env1_SOURCES  	= env1.c
 env1_LDADD    	= $(top_builddir)/src/libhamsterdb.la
+
+env2_SOURCES  	= env2.c
+env2_LDADD    	= $(top_builddir)/src/libhamsterdb.la
 
 noinst_BIN      = db1 db2 db3 db4 env1
